# Campus-Connect-Project-Sara---Karim---Mohamed---Marwan-

./: .gitignore  CMakeLists.txt  Campus_Connect_Code_Summary.docx  Project_Workload_Distribution.pptx  README.md  resources.qrc  server.cpp
.qtcreator/: CMakeLists.txt.user.wGbvHa
final_tests/CLIENT/: INetworkClient.h  MockNetworkClient.h  test_ChatController.cpp
final_tests/SERVER/: ChatState.h  Message.h  test_ChatState.cpp
src/: main.cpp
src/gui/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  GroupWindow.cpp  GroupWindow.h  GroupWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MessageRenderer.cpp  MessageRenderer.h  PrivateWindow.cpp  PrivateWindow.h  PrivateWindow.ui  qrc_resources.cpp  resources.qrc  ui_ChatWindow.h  ui_GroupWindow.h  ui_LoginWindow.h
src/logic/: ChatController.cpp  ChatController.h  ChatState.cpp  ChatState.h  InputValidator.cpp  InputValidator.h  Message.cpp  Message.h
src/network/: INetworkClient.h  MockNetworkClient.cpp  MockNetworkClient.h  TcpNetworkClient.cpp  TcpNetworkClient.h
src/server/: ClientSession.cpp  ClientSession.h  ServerController.cpp  ServerController.h  ServerState.cpp  ServerState.h  TcpServer.cpp  TcpServer.h
